# repro-test

./: .gitignore  Cargo.toml  Dioxus.toml
src/: main.rs
